[gd_scene load_steps=3 format=3 uid="uid://cxos0rds22vd2"]

[ext_resource type="Script" path="res://scripts/Start_Screen.gd" id="1_oy1k6"]
[ext_resource type="Theme" uid="uid://dxexyvotr4ywf" path="res://assets/UI/Main Menu UI Theme.tres" id="2_af3bh"]

[node name="Start Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oy1k6")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Game Title" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_af3bh")
text = "GAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Play" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_af3bh")
action_mode = 0
text = "Play"

[node name="Settings" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_af3bh")
action_mode = 0
text = "Settings"

[node name="Exit" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_af3bh")
action_mode = 0
text = "Exit
"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
